# classeviva-cpp

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: cmake.yml
classeviva-cpp/include/: Classeviva.h
classeviva-cpp/include/classeviva-cpp/: Classeviva.h
classeviva-cpp/src/: Classeviva.cpp
classeviva-test/src/: Main.cpp
